Double the number of points available in the chart and make sure the card components can wrap on a new line if viewport decreases too much.

--- a/client/src/game-stats/game-stats-cards.component.scss
+++ b/client/src/game-stats/game-stats-cards.component.scss
@@ -1,8 +1,10 @@
 .container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .item {
   flex: 1 1 0px;
+  min-width: 400px;
   margin: 10px;
 }
