--- a/client/src/game-stats/game-stats-chart.component.scss
+++ b/client/src/game-stats/game-stats-chart.component.scss
@@ -1,5 +1,5 @@
 .container {
   display: flex;
   justify-content: center;
-  margin: 10px;
+  margin: 30px;
 }
